fix horizontal scroll issue

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 :root {
   --background: #f7f7f7;
   --foreground: #171717;
@@ -62,7 +67,6 @@ body {
   font-weight: 500;
   margin: 0;
   padding: 0 20px;
-  overflow-x: hidden;
   position: relative;
 }
 
